adjust symlinks so that Y2DIR works

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,5 +2,6 @@
 # Makefile.am for network/src
 #
 
-SUBDIRS = modules clients routines lan services modem isdn dsl config	\
+SUBDIRS = include routines \
+	modules clients lan services modem isdn dsl config \
 	provider installation remote
