--- a/src/routines/Makefile.am
+++ b/src/routines/Makefile.am
@@ -8,3 +8,9 @@ yncludedir = @yncludedir@/network
 ynclude_DATA = $(wildcard *.ycp)
 
 EXTRA_DIST = $(ynclude_DATA)
+
+all: $(idirs)
+dist-hook: $(idirs)
+idirs := lan isdn modem dsl installation provider remote services
+${idirs}: %:
+	test -L $@ || ln -snf ../$* $@
