--- a/src/installation/Makefile.am
+++ b/src/installation/Makefile.am
@@ -12,10 +12,5 @@ client_DATA = inst_ask_net_test.ycp inst_do_net_test.ycp	\
 
 EXTRA_DIST = $(ynclude_DATA) $(client_DATA) $(ybin_SCRIPTS)
 
-YCPCFLAGS = -M../modules -I../modules
-# the rest has been already done in ../modules
-network:
-	ln -snf ../routines $@
-ycpchook = network
+YCPCFLAGS = -M../modules -I../include
 include $(top_srcdir)/Makefile.am.common
-CLEANFILES += $(ycpchook)
