one more symlink for tests

--- a/src/modules/Makefile.am
+++ b/src/modules/Makefile.am
@@ -6,4 +6,9 @@ EXTRA_DIST = $(module_DATA)
 
 YCPCFLAGS = -I../include
 
+all: YaPI
+dist-hook: YaPI
+YaPI:
+	test -L $@ || ln -snf ../lan/YaPI $@
+
 include $(top_srcdir)/Makefile.am.common
